Changed the rewrite rule for internal site-mgr support

--- a/trunk/lnx.milanin.com/egroupware/.htaccess
+++ b/trunk/lnx.milanin.com/egroupware/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*).html$ /egroupware/sitemgr/sitemgr-site/?page_name=$1 [L]
-#RewriteRule ^(.*)$ /egroupware/sitemgr/sitemgr-site/?page_name=$1 [L]
+#RewriteRule ^(.*).html$ /egroupware/sitemgr/sitemgr-site/?page_name=$1 [L]
+RewriteRule ^(.*)$ /egroupware/sitemgr/sitemgr-site/?page_name=$1 [L]
 
