--- a/trunk/lnx.milanin.com/egroupware/members/units/clubincall/clubincall.conf
+++ b/trunk/lnx.milanin.com/egroupware/members/units/clubincall/clubincall.conf
@@ -9,7 +9,9 @@ $switches=new Array(
           'username' => 'username',
           'password' => 'password',
           'host'=> 'localhost',
-          'port' => 5577
+          'port' => 5577,
+          'gateway' => 'mysofiagateway.com',
+          'prefix' => '00'
       )
     )
 );
